menger3.ui add aux.color

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -4,6 +4,9 @@ v2.29 (??? 2022)
    transfDIFSHelixV2
    transfSinYM3d
 
+- modified fractal formulas
+   mengerSponge3, add aux.color
+
 
 v2.28 (July 2022)
 
