transf_cayley2_v1.cl update

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -8,6 +8,7 @@ v2.29 (??? 2022)
    mengerSponge3, add aux.color
    mengerPolyFold, add aux.color
    mengerChebyshev, add aux.color
+   transfCayley2V1, update
 
 v2.28 (July 2022)
 
