transf_menger_fold_v2.cl update

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -9,6 +9,7 @@ v2.29 (??? 2022)
    mengerPolyFold, add aux.color
    mengerChebyshev, add aux.color
    transfCayley2V1, update
+   transfMengerFoldV2, update
 
 v2.28 (July 2022)
 
