menger_smooth_chebyshev.png and some minor updates

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -1,6 +1,8 @@
 Version history
 v2.29 (??? 2022)
 - Added new fractal formulas
+   mandelbulbSinCosV4;
+   mengerSmoothChebyshev
    transfDIFSHelixV2
    transfSinYM3d
 
