menger_pyramid.png

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -2,6 +2,7 @@ Version history
 v2.29 (??? 2022)
 - Added new fractal formulas
    mandelbulbSinCosV4;
+   mengerPyramid
    mengerSmoothChebyshev
    transfDIFSHelixV2
    transfSinYM3d
