transf_difs_helix_menger.png

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -5,6 +5,7 @@ v2.29 (??? 2022)
    mengerPyramid
    mengerSmoothChebyshev
    transfDIFSHelixV2
+   transfDIFSHelixMenger
    transfDIFSTorusMenger
    transfSinYM3d
 
