--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -7,6 +7,7 @@ v2.29 (??? 2022)
    transfDIFSHelixV2
    transfDIFSHelixMenger
    transfDIFSTorusMenger
+   transfSincosHelix
    transfSinYM3d
 
 - modified fractal formulas
