msltoe_toroidal_v2.png

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -7,6 +7,7 @@ v2.29 (??? 2023)
    mandelnestFull
    mengerPyramid
    mengerSmoothChebyshev
+   msltoeToroidalV2
    transfDIFSChessboard
    transfDIFSHelixV2
    transfDIFSHelixMenger
