menger_v3.cl update

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -1,5 +1,14 @@
 Version history
 
+v2.30 (??? 2023)
+
+- Added new fractal formulas
+
+
+- modified fractal formulas
+   mengerV3, update abs(z) enabled default
+
+
 v2.29 (April 2023)
 
 - Added new fractal formulas
