more menger_v3.cl updates

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -6,7 +6,7 @@ v2.30 (??? 2023)
 
 
 - modified fractal formulas
-   mengerV3, update abs(z) enabled default
+   mengerV3, update abs(z) enabled default, and other things
 
 
 v2.29 (April 2023)
