transf_difs_box_frame.ui add auxColor

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -4,9 +4,11 @@ v2.30 (??? 2023)
 
 - Added new fractal formulas
 
+   transfDotFold
 
 - modified fractal formulas
    mengerV3, update abs(z) enabled default, and other things
+   transfDIFSBoxFrame add auxColor
 
 
 v2.29 (April 2023)
