--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -5,6 +5,7 @@ v2.30 (??? 2023)
 - Added new fractal formulas
 
    transfDotFold
+   xenodreambuieV2
 
 - modified fractal formulas
    mengerV3, update abs(z) enabled default, and other things
