sphere_cluster.ui update

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -3,9 +3,11 @@ Version history
 v2.30 (??? 2023)
 
 - Added new fractal formulas
-
+   mandelbulbPupuku
    mengerV6
+   sphereCluster
    xenodreambuieV2
+   xenodreambuieV3
    transfAbsAddConstantV2
    transfDotFold
 
