--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -3,6 +3,7 @@ Version history
 v2.30 (??? 2023)
 
 - Added new fractal formulas
+   jos_kleinian_v4
    mandelbulbPupuku
    mengerV6
    sphereCluster
