--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -7,6 +7,7 @@ v2.31 (??? 2023)
    transfSphericalInvV3
 
 - modified fractal formulas
+   sphereCluster update DE calc, add void mode
    transfSphericalInvV2, add DE tweak
 
 
