--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -3,15 +3,12 @@ Version history
 v2.31 (??? 2023)
 
 - Added new fractal formulas
-
+   spheretreeV4
    transfSphericalInvV3
 
 - modified fractal formulas
    sphereCluster update DE calc, add void mode
    transfSphericalInvV2, add DE tweak
-
-
-
 
 
 v2.30 (July 2023)
