abox_donut4d_aa1.fract

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -3,6 +3,10 @@ Version history
 v2.31 (??? 2023)
 
 - Added new fractal formulas
+   aboxDonut4d
+   aboxDonut4dV2
+   sphereClusterV2
+   sphereClusterV3
    spheretreeV4
    transfSphericalInvV3
 
