--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -8,6 +8,7 @@ v2.31 (??? 2023)
    sphereClusterV2
    sphereClusterV3
    spheretreeV4
+   spheretreeV5
    transfSphericalInvV3
 
 - modified fractal formulas
