--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -5,6 +5,7 @@ v2.31 (??? 2023)
 - Added new fractal formulas
    aboxDonut4d
    aboxDonut4dV2
+   mengerV7
    sphereClusterV2
    sphereClusterV3
    spheretreeV4
