--- a/mandelbulber2/deploy/README
+++ b/mandelbulber2/deploy/README
@@ -1,5 +1,5 @@
 
-                              MANDELBULBER 2.31
+                              MANDELBULBER 2.31-1
 
 1. What is Mandelbulber
 -----------------------
