--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -7,6 +7,7 @@ TODO check all is finished with escape conditions
 
 
 - modified fractal formulas
+   aboxModKali, added aux.color
    aboxMod13, add missing xyz plane checkbox
 	 amazingSurfMulti, fix enable aux.color
 	 benesiPineTree, rework code
