--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -14,10 +14,12 @@ TODO check all is finished with escape conditions
 	 benesiT1PineTree, remove post offset iter controls (no code)
 	 josKleinian, added more aux.color
 	 pseudoKleinian, added aux.color
-	 pseudoKleinianMod, added aux.color
-	 pseudoKleinianMod, add iter controls to sphere inversion
+	 pseudoKleinianMod1, correct z scale and add aux.color
+	 pseudoKleinianMod1, add iter controls to sphere inversion
 	 pseudoKleinianMod2, correct UI
+   pseudoKleinianStdDE, correct z scale and add aux.color
 	 transfSphericalInv, fix modes
+	 transfSphericalFoldXYZBias, correct and update aux.color
 	 transfHybridColor2, fix parameter and add color tiling
 
 
