transf_surf_fold_multi update color

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -21,13 +21,15 @@ TODO check all is finished with escape conditions
 	 pseudoKleinianMod1, correct z scale and add aux.color
 	 pseudoKleinianMod1, add iter controls to sphere inversion
 	 pseudoKleinianMod2, correct UI
-   pseudoKleinianStdDE, correct z scale and add aux.color
+	 pseudoKleinianStdDE, correct z scale and add aux.color
 	 transfDELinearCube, add mix option
 	 transfScaleVaryV212, fix DE
 	 transfSphericalInv, fix modes
 	 transfSphericalFoldParab, fixed reverse offset and update aux.color
 	 transfSphericalFoldXYZBias, correct and update aux.color
+	 transfSurfFoldMulti, fix and update aux.color
 	 transfHybridColor2, fix parameter and add color tiling
+
 
 
    define M_PI_2_F for a few formulas
