--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -27,6 +27,7 @@ TODO check all is finished with escape conditions
 	 transfSphericalInv, fix modes
 	 transfSphericalFoldParab, fixed reverse offset and update aux.color
 	 transfSphericalFoldXYZBias, correct and update aux.color
+	 transfSurfBoxFold, fix and update aux.color
 	 transfSurfFoldMulti, fix and update aux.color
 	 transfHybridColor2, fix parameter and add color tiling
 
