--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -4,6 +4,8 @@ v2.32 (January 2023)
 TODO check all is finished with escape conditions
 - Added new fractal formulas
    transfJuliabox
+	 transfJuliaboxV2
+	 transfSphericalInvV4
 
 
 - modified fractal formulas
