--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -11,7 +11,9 @@ v2.33 (?? 2025)
 
 - modified fractal formulas
    amazingSurfM3d, iter controls inv cyl
-	 amazingSurfMulti, move sphere fold offsets on UI
+	 amazingSurf2, move rotation on UI
+	 amazingSurf3, move rotation on UI
+	 amazingSurfMulti, move sphere fold offsets and rotation on UI
 	 amazingSurfMulti, add iter controls cyl fold & cpix
 	 foldBoxMod1, UI add missing iter controls box fold 2
 	 koch, added aux.color
