transf_difs_torus_v4.png

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -8,6 +8,7 @@ v2.33 (?? 2025)
 	 transfDIFSOctahedron
 	 transfDIFSOctahedronV2
 	 transfDIFSSupershapeV2
+	 transfDIFSTorusV4
 
 - modified fractal formulas
    amazingSurfM3d, iter controls inv cyl
@@ -26,8 +27,10 @@ v2.33 (?? 2025)
 	 transfDIFSBox & BoxV2 & BoxV3, added aux.color
 	 transfDIFSCylinder & CylinderV2, added aux.color and round
 	 transfDIFSHexprism & HexprismV2, added aux.color
+	 transfDIFSHextgrid2, update aux.color, add pretranform
 	 transfDIFSPrism & PrismV2, added aux.color
 	 transfDIFSPrism & PrismV2, added hollow
+	 transfDIFSSphere, added aux.color
 	 transfInvCylindrical, add z.z option
 
 
