--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -33,6 +33,21 @@ v2.33 (?? 2025)
 	 transfDIFSSphere, added aux.color
 	 transfInvCylindrical, add z.z option
 
+- Animation: Added a simple spline editor for the animation parameters.
+- Added an option to clear keyframes from the animation chart. The keyframe without a value (empty cell) will be interpolated.
+- Examples: Updated most examples to be more attractive and to use new features. Added new examples.
+- Shaders: Global illumination uses material reflectance information.
+- Shaders: The size parameter defines the diameter of the tip of the conical light.
+- UI: Added an option to disable Monte Carlo effects in the Navigator.
+- UI: Added a temporary image scale (just below RENDER button)
+- Navigator: Added the possibility to use the Navigator from the Objects dock.
+- Primitives: Added a wall thickness parameter to all primitives.
+- Primitives: Added an ellipsoid primitive.
+- Scripts: Corrected the saving of scripts. They were not saved if the output value was default.
+- Fixed an error in transf_de_linear_cube.ui. It caused the application to crash when the UI formula was selected.
+- Fixed an error in normal vector calculation.
+- Fixed a bug: when fractalize texture was used, there was an error in OpenCL fast mode.
+
 
 v2.32 (August 2024)
 
