transf_difs_tube.png

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -3,12 +3,13 @@ Version history
 v2.33 (?? 2025)
 
 - Added new fractal formulas
-   dIFSGreekIfs
+   DIFSGreekIfs
 	 transfAbsSym3
 	 transfDIFSOctahedron
 	 transfDIFSOctahedronV2
 	 transfDIFSSupershapeV2
 	 transfDIFSTorusV4
+	 transfDIFSTube
 
 - modified fractal formulas
    amazingSurfM3d, iter controls inv cyl
@@ -31,6 +32,7 @@ v2.33 (?? 2025)
 	 transfDIFSPrism & PrismV2, added aux.color
 	 transfDIFSPrism & PrismV2, added hollow
 	 transfDIFSSphere, added aux.color
+	 transfDIFSTorus, update
 	 transfInvCylindrical, add z.z option
 
 - Animation: Added a simple spline editor for the animation parameters.
