koch ifs example

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -1,5 +1,15 @@
 Version history
 
+v2.34 (??? 2025)
+
+- Added new fractal formulas
+
+- modified fractal formulas
+   aboxModKaliEiffie updated aux.color
+	 amazingSurfMod1 updated aux.color
+
+
+
 v2.33 (March 2025)
 
 - Added new fractal formulas
