--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -7,6 +7,8 @@ v2.34 (??? 2025)
 - modified fractal formulas
    aboxModKaliEiffie updated aux.color
 	 amazingSurfMod1 updated aux.color
+	 transfAbsSym3, add scale
+	 transfJuliaboxV2, update color
 
 
 
