dIFSSphere update color

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -8,6 +8,7 @@ v2.34 (??? 2025)
    aboxModKaliEiffie updated aux.color
 	 amazingSurfMod1 updated aux.color
 	 mandalayBoxV2, add aux.dist
+	 dIFSSphere, fix aux.color
 	 transfAbsSym3, fix wrong parameter code and add scale
 	 transfJuliaboxV2, update color
 
