--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -9,6 +9,10 @@ v2.34 (??? 2025)
 	 amazingSurfMod1 updated aux.color
 	 mandalayBoxV2, add aux.dist
 	 dIFSSphere, fix aux.color
+	 dIFSCylinder, fix aux.color
+	 dIFSEllipsoid, fix aux.color
+	 dIFSPrism, fix aux.color
+	 dIFSTorus, fix aux.color
 	 transfAbsSym3, fix wrong parameter code and add scale
 	 transfJuliaboxV2, update color
 
