dIFSBoxDiagonalV1, fix aux.color
also
 dIFSBoxDiagonalV3
	 dIFSBoxV1
	 dIFSHextgrid2
	 dIFSMenger
	 dIFSMultiV1

--- a/mandelbulber2/deploy/NEWS
+++ b/mandelbulber2/deploy/NEWS
@@ -13,6 +13,13 @@ v2.34 (??? 2025)
 	 dIFSEllipsoid, fix aux.color
 	 dIFSPrism, fix aux.color
 	 dIFSTorus, fix aux.color
+	 dIFSBoxDiagonalV1, fix aux.color
+	 dIFSBoxDiagonalV3, fix aux.color
+	 dIFSBoxV1, fix aux.color
+	 dIFSHextgrid2, fix aux.color
+	 dIFSMenger, fix aux.color
+	 dIFSMultiV1 fix aux.color
+
 	 transfAbsSym3, fix wrong parameter code and add scale
 	 transfJuliaboxV2, update color
 
